# dx12-render-public

./: .gitignore  CMakeLists.txt  LICENSE  README.md  eastl.natvis  msvc.imp  ubsan_blacklist.txt  vcpkg-configuration.json  vcpkg.json
cmake/: DXCCompiler.cmake  Windows.cmake  (+3 more)
editor/: CMakeLists.txt
editor/src/: Main.cpp
engine/: CMakeLists.txt
engine/include/: CMakeLists.txt
engine/include/Engine/Core/: Bounds.h  CMakeLists.txt  ForwardDeclares.h  Handle.h  Keyboard.h  Mouse.h  Profiling.h  Singleton.h  Stopwatch.h  Transform.h  Window.h
engine/include/Engine/Core/ImGui/: CMakeLists.txt  ForwardDeclares.h  ImguiBarProfRight.h  ImguiHelpers.h  ImguiStdlib.h
engine/include/Engine/Memory/: CMakeLists.txt  FixedSizePoolAllocator.h  ForwardDeclares.h  LinearAllocator.h  Memory.h  PoolAllocator.h  UnintrusiveBuddyAllocator.h
engine/include/Engine/Render/: CMakeLists.txt  Camera.h  Debug.h  ForwardDeclares.h  GPUProfiler.h  Light.h  Mesh.h  RenderContext.h  Scene.h  ShaderHotReload.h  Texture.h
engine/include/Engine/Render/FrameGraph/: CMakeLists.txt  ForwardDeclares.h  FrameGraph.h  FrameGraphInternal.h  FrameGraphRegistry.h  Operations.h  RenderPass.h  RenderPassBuilder.h
engine/include/Engine/Render/RenderPasses/: CMakeLists.txt  ForwardDeclares.h  Shared.h
engine/include/Engine/RenderAPI/: CMakeLists.txt  CommandListManager.h  CommandQueue.h  Device.h  Fence.h  ForwardDeclares.h  ImGui.h  MaResource.h  MemoryAliasing.h  PipelineState.h  RenderAPI.h  Shader.h  ShaderBindingTableBuilder.h  ShaderInput.h  StateObjectBuilder.h  SwapChain.h
engine/include/Engine/Util/: Align.h  BinaryReader.h  BinaryWriter.h  CMakeLists.txt  CompileTimeStringMap.h  DirectoryChangeWatcher.h  ErrorHandling.h  FilePicker.h  FmtImgui.h  ForwardDeclares.h  ImguiHelpers.h  IsOfType.h  Math.h  ReadFile.h  TmpDir.h  WindowsForwardDeclares.h
engine/shaders/: inputs.si  lights.si  root_signatures.si  utils.si
engine/shaders/Engine/Debug/: debug_ps.hlsl  debug_random_cs.hlsl  debug_rt_cs.hlsl  visual_debug.hlsl  visual_debug_ps.hlsl  visual_debug_vs.hlsl
engine/shaders/Engine/Lights/: directional_light.hlsl  light.hlsl  point_light.hlsl  quad_light.hlsl  spot_light.hlsl
engine/shaders/Engine/Materials/: gltf_brdf.hlsl  ltc.hlsl
engine/shaders/Engine/PostProcessing/: color_correction_ps.hlsl  nvidia_denoise_decode_cs.hlsl  taa_resolve_ps.hlsl
engine/shaders/Engine/Rasterization/: deferred_render_ps.hlsl  deferred_shading_ps.hlsl  forward_ps.hlsl  forward_shadow_rt_ps.hlsl  mesh_shading.hlsl  mesh_shading_bindless_as.hlsl  mesh_shading_bindless_ms.hlsl  mesh_shading_ms.hlsl  mesh_shading_ps.hlsl  sun_visibility_rt_cs.hlsl  visibility_buffer_render_ps.hlsl  visibility_to_gbuffer_ps.hlsl
engine/shaders/Engine/RayTracing/: path_tracing.hlsl  rt_camera.hlsl
engine/shaders/Engine/Shared/: constants.hlsl  depth_to_linear.hlsl  static_mesh_taa_vs.hlsl  static_mesh_vs.hlsl  surface_interaction.hlsl  vertex.hlsl  vs_output.hlsl
engine/shaders/Engine/Util/: copy_channels_ps.hlsl  copy_ps.hlsl  full_screen_vertex.hlsl  full_screen_vs.hlsl  maths.hlsl  printf.hlsl  random.hlsl  string.hlsl
engine/src/: CMakeLists.txt
engine/src/Core/: Bounds.cpp  CMakeLists.txt  Keyboard.cpp  Mouse.cpp  Stopwatch.cpp  Transform.cpp  Window.cpp
engine/src/Memory/: CMakeLists.txt  FixedSizePoolAllocator.cpp  LinearAllocator.cpp  Memory.cpp  PoolAllocator.cpp  UnintrusiveBuddyAllocator.cpp
engine/src/Render/: CMakeLists.txt  Camera.cpp  Debug.cpp  GPUProfiler.cpp  Light.cpp  Material.cpp  MaterialLTC.h  Mesh.cpp  RenderContext.cpp  Scene.cpp  ShaderHotReload.cpp  Texture.cpp  VkFormat.h
engine/src/Render/FrameGraph/: CMakeLists.txt  FrameGraph.cpp  Operations.cpp
engine/src/Render/RenderPasses/: CMakeLists.txt  Shared.cpp
engine/src/RenderAPI/: CMakeLists.txt  CommandListManager.cpp  CommandQueue.cpp  Device.cpp  Fence.cpp  ImGui.cpp  MemoryAliasing.cpp  PipelineState.cpp  Shader.cpp  ShaderBindingTableBuilder.cpp  StateObjectBuilder.cpp  SwapChain.cpp
engine/src/RenderAPI/Buffer/: CMakeLists.txt  CpuBufferRingAllocator.cpp
engine/src/RenderAPI/Descriptor/: CMakeLists.txt  CpuDescriptorLinearAllocator.cpp  DescriptorBlockAllocator.cpp  GpuDescriptorLinearAllocator.cpp  GpuDescriptorStaticAllocator.cpp
engine/src/Util/: CMakeLists.txt  DirectoryChangeWatcher.cpp  Eastl.cpp  FilePicker.cpp  ImguiStdlib.cpp  ReadFile.cpp  TmpDir.cpp
engine/tests/: CMakeLists.txt
engine/tests/shaders/: inputs.si
engine/tests/shaders/Test/: test_printf_cs.hlsl  test_random_float_cs.hlsl  test_random_uint_cs.hlsl
engine/tests/src/: Main.cpp  pch.h
engine/tests/src/Core/: Bounds.cpp
engine/tests/src/Memory/: FixedSizePoolAllocator.cpp  LinearAllocator.cpp  UnintrusiveBuddyAllocator.cpp  memory.cpp
engine/tests/src/Render/: GPU.cpp  GPU.h  GPUPrintf.cpp  GPURandom.cpp  GPURender.cpp  RenderContext.cpp  Texture.cpp
engine/tests/src/Util/: Align.cpp  BinaryReaderWriter.cpp  CompileTimeStringMap.cpp  ErrorHandling.cpp  IsOfType.cpp  Math.cpp
shader_input_compiler/: CMakeLists.txt  README.md
shader_input_compiler/src/: AbstractSyntaxTree.h  FileManipulation.h  Main.cpp  Parse.h  ParseTree.cpp  ParseTree.h  StringManipulation.cpp  StringManipulation.h  WriteChangeFileStream.h
shader_input_compiler/src/backends/dx12-render/: ConstantBuffer.cpp  ConstantBuffer.h  DescriptorTableAllocator.cpp  DescriptorTableAllocator.h  GenerateDeviceCode.cpp  GenerateDeviceCode.h  GenerateHostCode.cpp  GenerateHostCode.h  HLSLRegister.cpp  HLSLRegister.h  RegisterAllocation.cpp  RegisterAllocation.h
shader_input_compiler/tests/example1/: example1.si
toolbox/: CMakeLists.txt
toolbox/include/tbx/: __bit_ops.h  bitwise_enum.h  disable_all_warnings.h  error_handling.h  hashmap_helper.h  move_only.h  std_span_eastl.h  string.h  template_meta.h  variant_helper.h  vector_size.h
toolbox/include/tbx/format/: fmt_glm.h  fmt_helpers.h
toolbox/tests/: CMakeLists.txt
toolbox/tests/src/: bit_ops.cpp  bitwise_enum.cpp  error_handling.cpp  format.cpp  hashmap_helper.cpp  string.cpp  template_meta.cpp  variant_helper.cpp
(+68 files in other folders)
